--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/relay-theme.css">
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
 <title>The Principal — Master Codex</title>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<link rel="stylesheet" href="./css/main.css"/>
-<link rel="stylesheet" href="./css/relay-theme.css"/>
 <script>
 try{
 // 
@@ -69,6 +65,7 @@ style.textContent = `
 
 
 
+<style>
 :root{
   --bg: #0d0f0d;
   --panel: rgba(255,255,255,.035);
@@ -960,9 +957,9 @@ body.mode-translator #variantDock{ border-color: rgba(127,209,209,0.22); }
   font-family: system-ui, Segoe UI, sans-serif;
   color: rgba(231,239,233,0.95);
 }
-#papersigilDock .dock-handle{ cursor: grab; user-select:none; }
-#papersigilDock .dock-handle:active{ cursor: grabbing; }
-#papersigilDock button{
+#paperSigilDock .dock-handle{ cursor: grab; user-select:none; }
+#paperSigilDock .dock-handle:active{ cursor: grabbing; }
+#paperSigilDock button{
   cursor:pointer;
   border:1px solid rgba(255,255,255,0.12);
   background:rgba(255,255,255,0.04);
@@ -1038,9 +1035,6 @@ body.mode-translator #variantDock{ border-color: rgba(127,209,209,0.22); }
 </style>
 
 </head>
-<div style="position:fixed;top:0;left:0;right:0;background:red;color:white;z-index:9999;">
-TEST BANNER
-</div>
 <body>
 
 
