--- a/registry/index.html
+++ b/registry/index.html
@@ -100,5 +100,150 @@
   render(items);
 })();
 </script>
+
+<script>
+/* Godex registry-driven hotkeys */
+(() => {
+  const REGISTRY_URL = './registry.json';
+
+  // Guard: don't steal keystrokes while typing
+  function isTypingTarget(el){
+    if (!el) return false;
+    const tag = (el.tagName || '').toLowerCase();
+    return el.isContentEditable || tag === 'input' || tag === 'textarea' || tag === 'select';
+  }
+
+  // Parse "Alt+M", "Ctrl+Shift+K", etc.
+  function parseHotkey(str){
+    const parts = String(str || '').split('+').map(s => s.trim().toLowerCase()).filter(Boolean);
+    const want = { alt:false, ctrl:false, shift:false, meta:false, key:null };
+    for (const p of parts){
+      if (p === 'alt') want.alt = true;
+      else if (p === 'ctrl' || p === 'control') want.ctrl = true;
+      else if (p === 'shift') want.shift = true;
+      else if (p === 'meta' || p === 'cmd' || p === 'command') want.meta = true;
+      else want.key = p; // last non-modifier token is key
+    }
+    return want.key ? want : null;
+  }
+
+  function matchHotkey(ev, want){
+    if (!want) return false;
+    if (!!want.alt !== !!ev.altKey) return false;
+    if (!!want.ctrl !== !!ev.ctrlKey) return false;
+    if (!!want.shift !== !!ev.shiftKey) return false;
+    if (!!want.meta !== !!ev.metaKey) return false;
+
+    const k = (ev.key || '').toLowerCase();
+    // Normalize special cases
+    const key = (k === 'escape') ? 'esc' : k;
+    return key === want.key;
+  }
+
+  // Turn "window.vault.mei" into a callable/function/value
+  function resolveHook(hookStr){
+    const s = String(hookStr || '').trim();
+    if (!s) return null;
+
+    // Supports "window.vault.mei" or "vault.mei"
+    const cleaned = s.replace(/^window\./, '');
+    const parts = cleaned.split('.').filter(Boolean);
+
+    let obj = window;
+    for (const p of parts){
+      if (obj && p in obj) obj = obj[p];
+      else return null;
+    }
+    return obj;
+  }
+
+  // Optional visual ping: highlight node by registry id
+  function flashNode(id){
+    if (!id) return;
+    const el = document.querySelector(`[data-node="${CSS.escape(id)}"]`);
+    if (!el) return;
+    el.classList.add('hotkey-hit');
+    setTimeout(() => el.classList.remove('hotkey-hit'), 220);
+  }
+
+  async function loadRegistry(){
+    const res = await fetch(REGISTRY_URL, { cache: 'no-store' });
+    if (!res.ok) throw new Error('registry fetch failed');
+    const data = await res.json();
+    if (!Array.isArray(data)) throw new Error('registry must be an array');
+    return data;
+  }
+
+  function buildMap(registry){
+    const map = [];
+    for (const item of registry){
+      const hk = parseHotkey(item.hotkey);
+      if (!hk) continue;
+      map.push({
+        want: hk,
+        id: item.id,
+        name: item.name,
+        hook: item.hook
+      });
+    }
+    return map;
+  }
+
+  function installHotkeys(map){
+    window.addEventListener('keydown', (ev) => {
+      if (isTypingTarget(ev.target)) return;
+
+      for (const entry of map){
+        if (!matchHotkey(ev, entry.want)) continue;
+
+        ev.preventDefault();
+
+        // Try to call hook
+        const target = resolveHook(entry.hook);
+
+        // Visual ping (optional)
+        flashNode(entry.id);
+
+        if (typeof target === 'function'){
+          try { target({ id: entry.id, name: entry.name, hotkey: entry.want }); }
+          catch (e) { console.warn('[vault hotkey] hook threw', entry, e); }
+          return;
+        }
+
+        // If hook exists but isn't a function, emit event so your system can catch it
+        if (target != null){
+          window.dispatchEvent(new CustomEvent('vault:hotkey', { detail: entry }));
+          return;
+        }
+
+        // Hook missing: still emit event (lets you wire later without breaking)
+        window.dispatchEvent(new CustomEvent('vault:hotkey-missing', { detail: entry }));
+        console.warn('[vault hotkey] missing hook:', entry.hook, entry);
+        return;
+      }
+    }, { passive: false });
+  }
+
+  // Boot
+  loadRegistry()
+    .then(reg => {
+      const map = buildMap(reg);
+      installHotkeys(map);
+      console.log('[vault hotkeys] installed', map.length);
+    })
+    .catch(err => console.warn('[vault hotkeys] failed', err));
+})();
+</script>
+
+<script>
+window.vault = window.vault || {};
+window.vault.paper = window.vault.paper || (() => console.log('paper'));
+window.vault.rock  = window.vault.rock  || (() => console.log('rock'));
+window.vault.mei   = window.vault.mei   || (() => console.log('meimei'));
+window.vault.pizzi = window.vault.pizzi || (() => console.log('pizzicato'));
+window.vault.sid   = window.vault.sid   || (() => console.log('sid'));
+window.vault.lux   = window.vault.lux   || (() => console.log('lampe/lux'));
+</script>
+
 </body>
 </html>
